# cratedb-django

./: CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml  thingstotest.md
.github/workflows/: release.yml  tests.yml
cratedb_django/: __init__.py  base.py  client.py  compiler.py  creation.py  features.py  introspection.py  operations.py  schema.py
cratedb_django/fields/: __init__.py  json.py
cratedb_django/models/: __init__.py  functions.py  model.py
cratedb_django/models/fields/: json.py
example/apps/simple_auth/: apps.py  models.py
example/apps/simple_auth/migrations/: 0001_initial.py
example/example/: settings.py  urls.py
tests/: __init__.py  conftest.py  settings.py  test_field.py  test_model.py  test_utils.py  utils.py
tests/test_app/: __init__.py  models.py
