[project]
name = "cratedb-django"
version = "0.1.0"
description = ""
authors = [{ name = "surister", email = "surister98@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "crate>=0.35.2,<0.36",
    "django>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "requests>=2.32.3",
]
