[project]
name = "cratedb-django"
version = "0.0.0" # The Version is updated in the CI workflow.
description = "CrateDB connector for Django "
authors = [{ name = "Ivan", email = "surister98@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE.md"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "crate==2.0.0",
    "django>=5.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-stubs>=5.1.3",
    "pytest-cratedb>=0.4.0",
    "requests>=2.32.3",
]

[project.urls]
"Home Page" = "https://github.com/surister/cratedb-django"
Documentation = "https://github.com/surister/cratedb-django"
Repository = "https://github.com/surister/cratedb-django.git"
GitHub = "https://github.com/surister/cratedb-django"
Changelog = "https://github.com/surister/cratedb-django/releases"
